--- a/index.html
+++ b/index.html
@@ -24,77 +24,77 @@
 		Mi Primer Piano
 	  </div>
 	  <div id="teclado">
+		<div id="fa" class="nota">
+		  <div class="textonota">FA</div>
+          <div id="FA" class="nota1">
+            <h5>FA #</h5>
+          </div>
+		</div>
+		<div id="sol" class="nota">
+		  <div class="textonota">SOL</div>
+          <div id="SOL" class="nota1">
+            <h5>SOL#</h5>
+          </div>
+		</div>
+		<div id="la" class="nota">
+		  <div class="textonota">LA</div>
+		</div>
+		<div id="si" class="nota">
+		  <div class="textonota">SI</div>
+          <div id="SI" class="nota1">
+            <h5>SI #</h5>
+          </div>
+		</div>
 		<div id="do" class="nota">
 		  <div class="textonota">DO</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="DO" class="nota1">
+            <h5>DO #</h5>
           </div>
 		</div>
 		<div id="re" class="nota">
 		  <div class="textonota">RE</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="RE" class="nota1">
+            <h5>RE #</h5>
           </div>
 		</div>
 		<div id="mi" class="nota">
 		  <div class="textonota">MI</div>
 		</div>
-		<div id="fa" class="nota">
+        <div id="fa" class="nota">
 		  <div class="textonota">FA</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="FA" class="nota1">
+            <h5>FA #</h5>
           </div>
 		</div>
 		<div id="sol" class="nota">
 		  <div class="textonota">SOL</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="SOL" class="nota1">
+            <h5>SOL#</h5>
           </div>
 		</div>
 		<div id="la" class="nota">
 		  <div class="textonota">LA</div>
-          <div class="nota1">
-            &nbsp;
-          </div>
 		</div>
 		<div id="si" class="nota">
 		  <div class="textonota">SI</div>
+          <div id="SI" class="nota1">
+            <h5>SI #</h5>;
+          </div>
 		</div>
-        <div id="do" class="nota">
+		<div id="do" class="nota">
 		  <div class="textonota">DO</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="DO" class="nota1">
+            <h5>DO #</h5>
           </div>
 		</div>
 		<div id="re" class="nota">
 		  <div class="textonota">RE</div>
-          <div class="nota1">
-            &nbsp;
+          <div id="RE" class="nota1">
+            <h5>RE #</h5>
           </div>
 		</div>
 		<div id="mi" class="nota">
 		  <div class="textonota">MI</div>
-		</div>
-		<div id="fa" class="nota">
-		  <div class="textonota">FA</div>
-          <div class="nota1">
-            &nbsp;
-          </div>
-		</div>
-		<div id="sol" class="nota">
-		  <div class="textonota">SOL</div>
-          <div class="nota1">
-            &nbsp;
-          </div>
-		</div>
-		<div id="la" class="nota">
-		  <div class="textonota">LA</div>
-          <div class="nota1">
-            &nbsp;
-          </div>
-		</div>
-		<div id="si" class="nota">
-		  <div class="textonota">SI</div>
 		</div>
 	  </div>
 	</div>
